--- a/static/styles.css
+++ b/static/styles.css
@@ -14,6 +14,7 @@ body{
   background-color: var(--dominant);
   font-family: 'Roboto Mono', monospace;
   display: flex;
+  transition: background-color 0.5s ease;
 }
 
 #vertical-menu{
@@ -364,3 +365,107 @@ width:80px;
   color: var(--text);
 }
 
+.save-button{
+  all:unset;
+  background-color: var(--dominant_3);
+  padding:0px 40px;
+  border-radius:20px;
+  height:40px;
+  color:var(--highlight);
+
+}
+[data-theme="dark"] {
+  --text: #000000;
+  --highlight: #d4c87d;
+  --hightlight_dark:#5E5629;
+  --dominant:#EEEEEE;
+  --dominant_1:#DDDDDD;
+  --dominant_2:#CCCCCC;
+  --dominant_3:#BBBBBB;
+  --dominant_4:#AAAAAA;
+  --error: #864E4E;
+}
+/*Simple css to style it like a toggle switch*/
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+
+  em {
+    margin-left: 10px;
+    font-size: 1rem;
+  }
+}
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.theme-switch input {
+  display:none;
+}
+
+.slider {
+  background-color: #333333;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: .4s;
+}
+
+.slider:before {
+  background-color: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: .4s;
+  width: 26px;
+}
+
+input:checked + .slider {
+  background-color: #b7b7b7;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* Hide the scrollbar */
+.div-with-scrollbar {
+  scrollbar-width: thin; /* Hide the scrollbar in Firefox */
+  scrollbar-color: transparent transparent; /* Hide the scrollbar in Firefox */
+  -webkit-scrollbar-width: thin; /* Hide the scrollbar in WebKit browsers */
+  -webkit-scrollbar-thumb: none; /* Hide the scrollbar in WebKit browsers */
+}
+
+/* Customize the scrollbar track (optional) */
+.div-with-scrollbar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Customize the scrollbar thumb (optional) */
+.div-with-scrollbar::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+.scroll-container {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+.scroll-container::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
+}
