send rows to client

--- a/templates/part_template.html
+++ b/templates/part_template.html
@@ -1,9 +1,9 @@
-<div class="row table-row">
+<div class="row table-row" onclick="partRowClicked(this)" id="{{SKU}}">
     <span>
       <input type="checkbox" class="part-checkbox">
       <img src="../static/images/0402.jpg" alt="logo" class="part-image" />
     </span>
-    <span>
+    <span class="SKU_box">
       {{SKU}}
     </span>
     <span>
