--- a/templates/part_template.html
+++ b/templates/part_template.html
@@ -6,29 +6,29 @@
           <input type="checkbox" class="part-checkbox">
           <img src="../static/images/0402.jpg" alt="logo" class="part-image" />
         </span>
-        <span>
+        <span id="{{SKU}}_SKU_span">
           {{SKU}}
         </span>
-        <span>
+        <span id="{{SKU}}_Name_span">
           {{Name}}
         </span>
-        <span>
+        <span id="{{SKU}}_Value_span">
           {{Value}}
         </span>
-        <span>
+        <span id="{{SKU}}_Footprint_span">
           {{Footprint}}
         </span>
-        <span>
+        <span id="{{SKU}}_Quantity_span">
           {{Quantity}}
         </span>
-        <span>
+        <span id="{{SKU}}_Rating_span">
           {{Rating}}
         </span>
-        <span>
+        <span id="{{SKU}}_Group_span">
           {{Group}}
         </span>
-        <span>
-          Location
+        <span id="{{SKU}}_Location_span">
+          {{Location}}
         </span>
         <span class="part-button-container">
           <div>
@@ -42,12 +42,12 @@
             </a>
           </div>
           <div>
-            <a href="{{Datasheet}}" target="_blank">
+            <a href="{{Datasheet}}" target="_blank" >
               <img src="../static/images/icons/datasheet.png" alt="launch" />
             </a>
           </div>
           <div>
-            <a onclick="deletePart(this)">
+            <a onclick="deletePart({{SKU}})">
               <img src="../static/images/icons/trash.png" alt="launch" />
             </a>
           </div>
@@ -64,61 +64,61 @@
           <div class="row">
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_Name">Name</label>
-              <input class="name-width data-entry" type="text" name="textbox" id="object_43_Name"
+              <input class="name-width data-entry" type="text" name="textbox" id="{{SKU}}_Name"
                 value="{{Name}}">
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_Value">Value</label>
-              <input class="value-width data-entry" type="text" name="textbox" id="object_43_Value" value="{{Value}}">
+              <input class="value-width data-entry" type="text" name="textbox" id="{{SKU}}_Value" value="{{Value}}">
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_Footprint">Footprint</label>
-              <input class="footprint-width data-entry" type="text" name="textbox" id="object_43_Footprint"
+              <input class="footprint-width data-entry" type="text" name="textbox" id="{{SKU}}_Footprint"
                 value="{{Footprint}}">
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_Quantity">Quantity</label>
-              <input class="quantity-width data-entry" type="text" name="textbox" id="object_43_Quantity"
+              <input class="quantity-width data-entry" type="text" name="textbox" id="{{SKU}}_Quantity"
                 value="{{Quantity}}">
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_Rating">Rating</label>
-              <input class="rating-width data-entry" type="text" name="textbox" id="object_43_Rating" value="{{Rating}}">
+              <input class="rating-width data-entry" type="text" name="textbox" id="{{SKU}}_Rating" value="{{Rating}}">
             </div>
             <div class="col-auto data-container">
-              <label class="data-label" for="object_43_group">Group</label>
+              <label class="data-label" for="Group">Group</label>
               <!-- <input class= "group-width data-entry" type="text" name="textbox" id="object_43_group" value="none"> -->
-              <select class="group-width data-entry" id="group-dropdown" name="fruit">
-                <option value="apple">in stock</option>
-                <option value="banana">low stock</option>
-                <option value="cherry">price</option>
+              <select class="group-width data-entry" id="{{SKU}}_Group" name="fruit">
+                <option value="Passives">Passives</option>
+                <option value="low stock">low stock</option>
+                <option value="price">price</option>
                 <option value="orange">oldest</option>
                 <option value="strawberry">newest</option>
               </select>
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_location">Location</label>
-              <input class="location-width data-entry" type="text" name="textbox" id="object_43_location"
+              <input class="location-width data-entry" type="text" name="textbox" id="{{SKU}}_Location"
                 value="{{Location}}">
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_tags">Tags</label>
-              <input class="tags-width data-entry" type="text" name="textbox" id="object_43_tags" value="{{Tags}}">
+              <input class="tags-width data-entry" type="text" name="textbox" id="{{SKU}}_Tags" value="{{Tags}}">
             </div>
           </div>
           <div class="row">
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_sku">SKU</label>
-              <input class="sku-width data-entry" type="text" name="textbox" id="object_43_sku" value="{{SKU}}">
+              <input class="sku-width data-entry" type="text" name="textbox" id="{{SKU}}_SKU" value="{{SKU}}" readonly>
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_price">Price</label>
-              <input class="price-width data-entry" type="text" name="textbox" id="object_43_price"
-                value="{{SKU}}">
+              <input class="price-width data-entry" type="text" name="textbox" id="{{SKU}}_Price"
+                value="{{Price}}">
             </div>
             <div class="col-auto data-container">
               <label class="data-label" for="object_43_warningstock">Warning Stock</label>
-              <input class="price-width data-entry" type="text" name="textbox" id="object_43_warningstock"
+              <input class="price-width data-entry" type="text" name="textbox" id="{{SKU}}_Warning_Stock"
                 value="{{Warning_Stock}}">
             </div>
           </div>
@@ -127,13 +127,13 @@
               <div class="row">
                 <div class="col-auto data-container">
                   <label class="data-label" for="object_43_warningstock">Source</label>
-                  <input class="source-width data-entry" type="text" name="textbox" id="object_43_source"
+                  <input class="source-width data-entry" type="text" name="textbox" id="{{SKU}}_Source"
                     value="{{Source}}">
                 </div>
                 <div class="col-auto data-container">
                   <label class="data-label" for="object_43_datasheet">Datasheet</label>
-                  <input class="datasheet-width data-entry" type="text" name="textbox" id="object_43_datasheet"
-                    value="{{Source}}">
+                  <input class="datasheet-width data-entry" type="text" name="textbox" id="{{SKU}}_Datasheet"
+                    value="{{Datasheet}}">
                 </div>
               </div>
             </div>
